--- a/schematic-examples/react-schematic-package-example/files/src/index.html
+++ b/schematic-examples/react-schematic-package-example/files/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="assets/favicon.ico">
     <link href="./../node_modules/normalize.css/normalize.css" rel="stylesheet"/>
     <link href="./../node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet"/>
@@ -18,6 +18,6 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script src="./index.tsx"></script>
+    <script src="index.tsx"></script>
 </body>
 </html>
